Fixed hamburgermenu behind picture on phone

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -105,7 +105,7 @@
     }
     
     .menu-links.open {
-      max-height: 250px;
+      max-height: 300px;
     }
 
     .menu-links a {
