--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ nav a:hover {
 
 .menu-links.open {
   max-height: 300px;
+  z-index: 1000;
 }
 
 .hamburger-icon.open span:first-child {
